# forecast

./: .gitignore  README.md  app.py  data.csv  pyproject.toml  requirements.txt  viz.py
modules/: __init__.py  campaign.py  data_preparation.py  export_results.py  types.py  utils.py  validation.py
modules/forecasting/: __init__.py  arima.py  forecast.py  gxgboost.py  knn.py  prophet.py  xgboost.py
